--- a/src/main/webapp/WEB-INF/views/createuser.html
+++ b/src/main/webapp/WEB-INF/views/createuser.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" class="background">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Create User</title>
-    <link rel="stylesheet" href="http://localhost:8080/css/create_form.css">
 </head>
 <body>
-<div class="center">
-    <form action="/createuser" method="post" th:object="${user}">
+<div>
+    <form action="createuser" method="post" th:object="${user}">
         <table>
             <tr>
                 <td><h2>Create</h2></td>
+            </tr>
+            <tr>
+                <td><label>Login:</label></td>
+                <td><input type="text" placeholder="My username" th:field="*{username}"></td>
+            </tr>
+            <tr>
+                <td><label>Password:</label></td>
+                <td><input type="text" placeholder="My password" th:field="*{password}"></td>
             </tr>
             <tr>
                 <td><label>Name:</label></td>
@@ -25,14 +32,22 @@
                 <td><input type="number" name="age" placeholder="My age" th:field="*{age}"></td>
             </tr>
             <tr>
-                <td><button type="submit">Submit</button></td>
-                <td><button type="reset">Reset</button></td>
+                <td><label>User role</label><input type="checkbox" name="userCheck"></td>
+                <td><label>Admin role</label><input type="checkbox" name="adminCheck"></td>
+            </tr>
+            <tr>
+                <td>
+                    <button type="submit">Submit</button>
+                </td>
+                <td>
+                    <button type="reset">Reset</button>
+                </td>
             </tr>
         </table>
     </form>
     <br>
     <br>
-    <a href="/">Back</a>
+    <a href="/admin/">Back</a>
 </div>
 </body>
 </html>
