--- a/src/main/resources/templates/listuser.html
+++ b/src/main/resources/templates/listuser.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div class="right">
-    <form th:action="@{/logout}" method="post">
-        <button type="submit">Sign Out</button>
+    <form action="/logout" method="post">
+        <button type="submit">Logout</button>
     </form>
 </div>
 <div>
