--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -7,8 +7,8 @@
 <body>
 <div>
     <div>
-        <form th:action="@{/logout}" method="post">
-            <button type="submit">Sign Out</button>
+        <form action="/logout" method="post">
+            <button type="submit">Logout</button>
         </form>
     </div>
     <h1>My Page</h1>
