--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -2,36 +2,74 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>My Page</title>
+    <title>User page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
 </head>
 <body>
-<div>
-    <div>
-        <form action="/logout" method="post">
-            <button type="submit">Logout</button>
-        </form>
+<nav class="navbar navbar-dark bg-dark">
+    <span class="navbar-text text-light">
+        <span class="font-weight-bold" th:text="${user.getUsername()}"></span>
+        <span th:utext="' with roles: ' + ${#strings.arrayJoin(user.getRoles(), ' ')}"></span>
+    </span>
+    <a href="/logout" class="justify-content-end text-light text-decoration-none">Logout</a>
+</nav>
+<div class="row p-0 m-0">
+    <!--    Левая навигационная панель-->
+    <div class="col-2 p-0 m-0 pt-3" style="height: 100vh;">
+        <div class="nav flex-column nav-pills" aria-orientation="vertical">
+            <a class="nav-link active pl-4" data-toggle="pill" href="#user_page">User</a>
+        </div>
     </div>
-    <h1>My Page</h1>
-    <table border="1">
-        <tr>
-            <td>Login</td>
-            <td>Password</td>
-            <td>Name</td>
-            <td>E-mail</td>
-            <td>Age</td>
-            <td>Role</td>
-        </tr>
-        <tr>
-            <td th:utext="${user.getUsername()}"></td>
-            <td th:utext="${user.getPassword()}"></td>
-            <td th:utext="${user.getName()}"></td>
-            <td th:utext="${user.getEmail()}"></td>
-            <td th:utext="${user.getAge()}"></td>
-            <td>
-                <p th:each="role: ${user.getRoles()}" th:utext="${role.getName()}"></p>
-            </td>
-        </tr>
-    </table>
+    <div class="col-10 bg-light" style="height: 100vh;">
+        <div class="tab-content pl-3 pr-3">
+            <div class="tab-pane fade show active" id="user_page">
+                <h1 class="pt-3">User information-page</h1>
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="mt-0 mb-0">About user</h5>
+                    </div>
+                    <div class="card-body">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">First name</th>
+                                <th scope="col">Last name</th>
+                                <th scope="col">Age</th>
+                                <th scope="col">E-mail</th>
+                                <th scope="col">Role</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <th class="font-weight-normal" th:text="${user.getId()}">ID</th>
+                                <th class="font-weight-normal" th:text="${user.getFirstName()}">First name</th>
+                                <th class="font-weight-normal" th:text="${user.getLastName()}">Last name</th>
+                                <th class="font-weight-normal" th:text="${user.getAge()}">Age</th>
+                                <th class="font-weight-normal" th:text="${user.getEmail()}">E-mail</th>
+                                <th class="font-weight-normal" th:text="${#strings.arrayJoin(user.getRoles(), ' ')}">
+                                    Role
+                                </th>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+</div>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 </html>
